# midas-benchmarks

./: .gitignore  .gitmodules  README.md  README.md-eccc  buildTargetGrid  compareResults  download_dbase.sh  interpEnsTrials  interpEnsTrials2coarserResolution  launcher  launcher_flipobs_x  launcher_flipobs_xy  launcher_randomShuffleSubEns  nml_100km  nml_10km  nml_interpEnsTrials  nml_randomShuffleSubEns  obs  reencodeEnsTrials  run-the-build-for-macos.sh  verify
obs/: obsai  obsatms  obscris  obsiasi  obsro  obssc  obssf  obssw  obsto_amsua  obsto_amsub  obsua
perftools/: .gitignore
perftools/src/: Makefile  Notes_MacOS.md  README
perftools/src/jio/: Makefile  jio-uni-2.c
perftools/src/timing/: Makefile  history_trace.c  hpco_fort_hpm.c  rebind.c  weak_openmp.h
rpn/: CMakeLists.txt
rpn/cclargs/: CMakeLists.txt  cclargs_lite.c
src/: Makefile
src/timing/: Makefile
